# hello-vulkan

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  uwu2
.github/workflows/: test.yml
assets/: .gitignore  monkey.mtl  pointcloud.mtl
shaders/: CMakeLists.txt  default_lit.frag  point.vert  tri_mesh.vert  tri_rgb.frag  tri_rgb.vert  triangle.frag  triangle.vert
source/: CMakeLists.txt  engine.cpp  engine.h  hello.cpp  hello_engine.cpp  hello_engine.h  main.cpp  pipeline_builder.cpp  pipeline_builder.h  read_apple.cpp  read_apple.h  vk_init.cpp  vk_init.h  vk_mesh.cpp  vk_mesh.h  vk_types.h
